# DL-monorepo

./: .gitignore  package.json  pnpm-lock.yaml  vercel.json
apps/bracket-wrap/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/bracket-wrap/app/: error.tsx  globals.css  layout.tsx  page-state.tsx  page.tsx
apps/bracket-wrap/app/api/: bracket-data.ts
apps/bracket-wrap/app/wrapped/: page.tsx
apps/bracket-wrap/components/: IntroSequence.tsx  LandingPage.tsx  LandingPage2.tsx  LoadingAnimation.tsx  StoryContainer.tsx  StoryProgress.tsx  StorySlide.tsx  WaterDropGrid.tsx  old_LandingPage.tsx  providers.tsx
apps/bracket-wrap/components/story-slides/: BracketCinderellaSlide.tsx  BracketSummarySlide.tsx  BracketTwinSlide.tsx  BracketTwinStorySlide.tsx  CelebrityTwinBracketSlide.tsx  ShareButton.tsx  (+5 more)
apps/bracket-wrap/hooks/: useLandingPageState.ts  useShareContent.ts  useStoryNavigation.ts  useTeams.ts  useUrlParams.ts
apps/bracket-wrap/types/: web-share-api.d.ts
apps/conceal-dc/: .gitignore  README.md  create-table.md  next.config.js  next.config.ts  old_components.json  package.json  tsconfig.json  vercel.json
apps/conceal-dc/backend/: .gitignore  Dockerfile  api.py  pyproject.toml  requirements.txt  task-definition.json  worker.py
apps/conceal-dc/backend/auth/: __init__.py  config.py  database.py  dependencies.py  notifications.py  routes.py  schemas.py  token_utils.py
apps/conceal-dc/public/: site.webmanifest
apps/dogmatic-labs/: package.json
apps/dogmatic-labs/app/: globals.css  layout.tsx  page.tsx
apps/web/: vercel.json
(+51 files in other folders)
